# FEEMS

./: .gitignore  .pdca-status.json  .release-please-manifest.json  CLAUDE.md  LICENSE  README.md  pyproject.toml  release-please-config.json  requirements.txt  requirements_dev.txt
.bkit/: agent-state.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/skills/issue-resolve/: README.md
.github/skills/write-backlog/: README.md
.github/workflows/: publish_MachSysS.yml  publish_RunFeemsSim.yml  publish_feems.yml  release-please.yml  test.yml
RunFEEMSSim/: 00_machinery_calculation.ipynb  01_pms_basic.ipynb  CHANGELOG.md  MIGRATION_FROM_NBDEV.md  README.md  azure-pipelines.yml  build_library.sh  index.ipynb  pyproject.toml  requirements.txt  settings.ini  setup.py
RunFEEMSSim/RunFeemsSim/: __init__.py  _modidx.py  _nbdev.py  machinery_calculation.py  pms_basic.py
RunFEEMSSim/tests/: machinery_system_hybrid.mss  mechanical_propulsion_with_electric_system.mss  system_proto.mss  test_machinery_calculation.py  test_pms_basic.py
docs/: .bkit-memory.json  .pdca-status.json  README.md
docs/01-plan/: 2026-02-19-user-defined-fuel-support.md
docs/01-plan/features/: coges-simulation-support.plan.md  per-component-performance-metrics.plan.md  steam-boiler.plan.md
docs/02-design/features/: coges-simulation-support.design.md  per-component-performance-metrics.design.md
docs/03-analysis/: 2026-02-20-user-defined-fuel-extended.md  per-component-performance-metrics.analysis.md
docs/04-report/: coges-simulation-support.report.md  per-component-performance-metrics.report.md
docs/api/: README.md
docs/api/RunFEEMSSim/: API_REFERENCE.md
docs/api/feems/: API_REFERENCE.md
docs/api/machinery-system-structure/: API_REFERENCE.md
docs/archive/2026-02/: _INDEX.md
docs/archive/2026-02/engine-emission-curve-ghg-override/: 2026-02-22-engine-emission-curve-ghg-override.md  engine-emission-curve-ghg-override.analysis.md  engine-emission-curve-ghg-override.report.md
docs/archive/2026-02/user-defined-fuel-support/: 2026-02-19-user-defined-fuel-support.md  2026-02-20-user-defined-fuel-extended.md  analysis.md  design.md  report.md
docs/backlog/: 2026-02-19-user-defined-fuel-support.md  2026-02-22-engine-emission-curve-ghg-override.md  2026-04-27-coges-simulation-support.md  2026-05-06-steam-boiler.md  2026-05-20-per-component-performance-metrics.md
examples/: .gitignore  00_Basic_Example.ipynb  01_Running_simulation.ipynb  02_Shore_Power_Example.ipynb  README.md  SHORE_POWER_GUIDE.md  configuration.json  equipment_data.json  utils.py
feems/: API_REFERENCE.md  CHANGELOG.md  MANIFEST.in  README.md  build_feems.sh  pyproject.toml  readme.md  requirements.txt
feems/feems/: __init__.py  constant.py  exceptions.py  fuel.py  runsimulation.py  simulation_interface.py  system_model.py  types_for_feems.py
feems/feems/components_model/: __init__.py  component_base.py  component_electric.py  component_mechanical.py  node.py  utility.py
feems/feems/package_data/: fuel_eu_fuel_table.csv  fuel_eu_fuel_table.xlsx  fuel_imo_table.csv
feems/tests/: test_available_fuel_options_by_converter.py  test_available_fuel_options_proto.py  test_battery.py  test_coges_simulation.py  test_components.py  test_fuel.py  test_mechanical_system_simulation.py  test_node.py  test_operating_avg_metrics.py  test_runsimulation.py  test_shore_power.py  test_steam_boiler.py  test_system.py  test_system_mechanical_propulsion.pb  test_system_simplified.py  test_utility_for_component_models.py  test_utility_for_test.py  utility.py  verify_operating_avg_metrics.py
feems_mcp/: README.md  pyproject.toml  server.py
machinery-system-structure/: 00_ConvertToFeems.ipynb  01_ConvertToProtobuf.ipynb  02_Utility.ipynb  03_ConvertFEEMSResultToProto.ipynb  04_ConvertGymirResultToProto.ipynb  05_ConvertTimeSeriesResultProtoToPandas.ipynb  CHANGELOG.md  MANIFEST.in  README.md  azure-pipelines.yml  build_package.sh  build_package_linux.sh  build_package_mac.sh  compile_proto.sh  index.ipynb  pyproject.toml  requirements.txt  settings.ini  setup.py  shipX2DeSim.json  timeseries_test.csv  timeseries_test.sim  timeseries_test_.sim
machinery-system-structure/MachSysS/: __init__.py  _modidx.py  convert_feems_result_to_proto.py  convert_gymir_result_to_proto.py  convert_proto_timeseries.py  convert_to_feems.py  convert_to_protobuf.py  feems_result_pb2.py  feems_result_pb2.pyi  gymir_result_pb2.py  gymir_result_pb2.pyi  system_structure_pb2.py  system_structure_pb2.pyi  utility.py
machinery-system-structure/proto/: feems_result.proto  gymir_result.proto  system_structure.proto
machinery-system-structure/tests/: Timeseries1648799237.csv  efficiency_electric_components.json  electric_propulsion_system.mss  electric_system_with_pto.mss  feems_result.json  feems_result_detail.csv  feems_result_proto_new.sim  hybrid_propulsion_system.mss  mechanical_propulsion_with_electric_system.mss  mechanical_system_with_pto.mss  system_proto.mss  system_proto_with_coges.mss  test.py  test_convert_feems_result_to_proto.py  test_convert_gymir_result_to_proto.py  test_convert_proto_timeseries.py  test_convert_to_feems.py  test_convert_to_protobuf.py  test_steam_boiler.py  utility.py  utility_compare_proto.py
