[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "RunFeemsSim"
dynamic = ["version"]
description = "A library for running feems simulation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Kevin Koosup Yum", email = "kevinkoosup.yum@sintef.no"}]
keywords = ['FEEMS,', 'machinery', 'system,', 'fuel,', 'emissions']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 2 - Pre-Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['pandas', 'numpy', 'MachSysS']

[project.urls]
Repository = "https://github.com/SINTEF/FEEMS"
Documentation = "https://kevinkoosup.yum@sintef.no.github.io/RunFeemsSim/"

[project.entry-points.nbdev]
RunFeemsSim = "RunFeemsSim._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "RunFeemsSim.__version__"}

[tool.setuptools.packages.find]
include = ["RunFeemsSim"]

[tool.nbdev]
nbs_path = '.'
doc_path = 'docs'
branch = 'master'
recursive = false
custom_sidebar = false
title = 'RunFeemsSim'
