[tool.poetry]
name = "feems"
version = "0.11.11"
description = ""
authors = ["Kevin Koosup Yum <kevinkoosup.yum@sintef.no>"]
readme = "readme.md"
include = ["feems/py.typed"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
scipy = "^1.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "22.6.0"
mypy = "^1.5.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
sphinx-autodoc-typehints = "^1.24.0"
pytest-subtests = "^0.11.0"
unittest-xml-reporting = "^3.2.0"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 99
target-version = ['py37']

[build-system]
requires = ["poetry>=1.4.0", "setuptools>=40.8.0"]
build-backend = "poetry.core.masonry.api"
