[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feems"
version = "0.13.1"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Kevin Koosup Yum", email = "kevin.koosup.yum@gmail.com" }]
dependencies = ["pandas>=2.1.1", "scipy>=1.11.2"]

[tool.hatch.build.targets.wheel]
packages = ["feems"]
artifacts = ["feems/package_data/*.csv", "feems/package_data/*.xlsx"]

[dependency-groups]
dev = [
  "pytest>=7.4.2",
  "mypy>=1.5.1",
  "sphinx>=7.2.6",
  "sphinx-rtd-theme>=1.3.0",
  "sphinx-autodoc-typehints>=1.24.0",
  "pytest-subtests>=0.11.0",
  "unittest-xml-reporting>=3.2.0",
  "pytest-cov>=4.1.0",
]
